--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- Image Section -->
     <div id="imageSection">
-      <iframe id="imageFrame" src="" frameborder="0"></iframe>
+      <img id="imageFrame" src="" alt="Reading Image">
     </div>
 
     <!-- Reading Text -->
