--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weekly Readings by Teacher Jony Rojas</title>
-  <link rel="stylesheet" href="styles.css">
+  
+  <!-- Add the versioned CSS file here in the <head> section -->
+  <link rel="stylesheet" href="styles-v1.0.0.css">
 </head>
 <body>
   <div class="container">
@@ -46,6 +48,7 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <!-- Add the versioned JavaScript file here, just before the closing </body> tag -->
+  <script src="script-v1.0.0.js"></script>
 </body>
 </html>
