--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Weekly Readings by Teacher Jony Rojas</title>
   
   <!-- Add the versioned CSS file here in the <head> section -->
-  <link rel="stylesheet" href="styles-v1.0.0.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
@@ -39,7 +39,7 @@
 
     <!-- Image Section -->
     <div id="imageSection">
-      <img id="imageFrame" src="" alt="Reading Image">
+      <iframe id="imageFrame" src="" frameborder="0"></iframe>
     </div>
 
     <!-- Reading Text -->
@@ -48,7 +48,6 @@
     </div>
   </div>
 
-  <!-- Add the versioned JavaScript file here, just before the closing </body> tag -->
-  <script src="script-v1.0.0.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
