edited index and style

--- a/index.html
+++ b/index.html
@@ -43,20 +43,22 @@
       <p id="textContent">Select a week and grade to load the reading.</p>
     </div>
   </div>
-  
-  
-	  <!-- Vocabulary Section -->
-		<div id="vocabularySection">
-		  <h3>Vocabulary</h3>
-		  <div id="vocabularyContent"></div>
-		</div>
 
-		<!-- Quiz Section -->
-		<div id="quizSection">
-		  <h3>Quiz</h3>
-		  <div id="quizContent"></div>
-		</div>
-  
+  <!-- Vocabulary Section -->
+  <div class="container">
+    <div id="vocabularySection">
+      <h3>Vocabulary</h3>
+      <div id="vocabularyContent"></div>
+    </div>
+  </div>
+
+  <!-- Quiz Section -->
+  <div class="container">
+    <div id="quizSection">
+      <h3>Quiz</h3>
+      <div id="quizContent"></div>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
