Updated quiz new

--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
   </div>
 
   <!-- Quiz Section -->
-  <div class="container">
-    <div id="quizSection">
-      <h3>Quiz</h3>
-      <div id="quizContent"></div>
-    </div>
-  </div>
+<div id="quizSection">
+  <h3>Quiz</h3>
+  <div id="quizContent"></div>
+  <button id="scoreButton">My Score</button>
+  <button id="clearButton">Clear</button>
+  <p id="scoreFeedback"></p>
+</div>
 
   <script src="script.js"></script>
 </body>
