--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     <div id="quizSection">
       <h3>Quiz</h3>
       <div id="quizContent"></div>
+	  <button id="scoreButton">My Score</button>
+      <button id="clearButton">Clear</button>
+      <p id="scoreFeedback"></p> 
     </div>
   </div>
 
