added textboxes for input 12.38 am

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
   <!-- Vocabulary Section -->
   <div class="container">
     <div id="vocabularySection">
-      <h3>Vocabulary</h3>
+      <h3><span style="color: darkred;">VOCABULARY REVIEW</span></h3><br>
+	  <p>Make sure to review this "key vocabulary". Remember, "Practice Makes Perfect!"</P><br> 
       <div id="vocabularyContent"></div>
     </div>
   </div>
@@ -55,8 +56,23 @@
   <!-- Quiz Section -->
   <div class="container">
     <div id="quizSection">
-      <h3>Quiz</h3>
-      <div id="quizContent"></div>
+      <h3><span style="color: darkred;">TAKE A QUIZ</span></h33><br>
+	  <p>Let's see how much you learned in this activity...</p><br>
+	  <p>Please, enter all the information in the boxes and take a screenshot.<p>
+	  <pShow it or send it to your teacher (if requested)."</P><br>
+      
+	  <!-- Data Entry Fields -->
+		<label for="school">School:</label>
+		<input type="text" id="school" name="school" size="40"><br><br>
+
+		<label for="group">Group:</label>
+		<input type="text" id="group" name="group" size="40"><br><br>
+
+		<label for="name">Name + Last Name:</label>
+		<input type="text" id="name" name="name" size="40"><br><br>
+	    
+	  
+	  <div id="quizContent"></div>
 	  <button id="scoreButton">My Score</button>
       <button id="clearButton">Clear</button>
       <p id="scoreFeedback"></p> 
