--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   <!-- Vocabulary Section -->
   <div class="container">
     <div id="vocabularySection">
-      <h3><span style="color: darkred;">VOCABULARY REVIEW</span></h3><br>
-	  <p>Make sure to review this "key vocabulary". Remember, "Practice Makes Perfect!"</P><br> 
+      <h3><span style="color: darkred;">VOCABULARY REVIEW</span></h3>
+	  <p>Make sure to review this "key vocabulary". Remember, "Practice Makes Perfect!"</P> 
       <div id="vocabularyContent"></div>
     </div>
   </div>
