--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
   <!-- Quiz Section -->
   <div class="container">
     <div id="quizSection">
-      <h3><span style="color: darkred;">TAKE A QUIZ</span></h33><br>
+      <h3><span style="color: darkred;">TAKE A QUIZ</span></h3>
 	  <p>Let's see how much you learned in this activity...</p><br>
 	  <p>Please, enter all the information in the boxes and take a screenshot.<p>
 	  <pShow it or send it to your teacher (if requested)."</P><br>
       
 	  <!-- Data Entry Fields -->
-		<label for="school">School:</label>
-		<input type="text" id="school" name="school" size="40"><br><br>
+		<label for="school">          School:</label>
+		<input type="text" id="school" name="school" size="40"><br>
 
-		<label for="group">Group:</label>
-		<input type="text" id="group" name="group" size="40"><br><br>
+		<label for="group">           Group:</label>
+		<input type="text" id="group" name="group" size="40"><br>
 
 		<label for="name">Name + Last Name:</label>
-		<input type="text" id="name" name="name" size="40"><br><br>
+		<input type="text" id="name" name="name" size="40"><br>
 	    
 	  
 	  <div id="quizContent"></div>
