--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="container">
     <div id="quizSection">
       <h3><span style="color: darkred;">TAKE A QUIZ</span></h3>
-	  <p>Let's see how much you learned in this activity...</p><br>
+	  <p>Let's see how much you learned in this activity...</p><
 	  <p>Please, enter all the information in the boxes and take a screenshot.<p>
 	  <pShow it or send it to your teacher (if requested)."</P><br>
       
