--- a/index.html
+++ b/index.html
@@ -64,20 +64,31 @@
 	  <pShow it or send it to your teacher (if requested)."</P><br>
       
 	  <!-- Data Entry Fields -->
-		<label for="school">          School:</label>
+		<label for="school">*          School:</label>
 		<input type="text" id="school" name="school" size="40"><br><br>
 
-		<label for="group">           Group:</label>
+		<label for="group">*           Group:</label>
 		<input type="text" id="group" name="group" size="40"><br><br>
 
-		<label for="name">Name + Last Name:</label>
+		<label for="name">*Name + Last Name:</label>
 		<input type="text" id="name" name="name" size="40"><br><br>
-	  <button id="scoreButton">My Score</button>
-      <button id="clearButton">Clear</button>
-      <p id="scoreFeedback"></p> 
+		
+		<!-- Buttons -->
+		<button id="scoreButton" onclick="hideScoreButton()">My Score</button>
+		<button id="clearButton" onclick="showScoreButton()">Clear</button>
+		<p id="scoreFeedback"></p> 
     </div>
   </div>
+  
+	<script>
+	  function hideScoreButton() {
+		document.getElementById("scoreButton").style.display = "none";
+	  }
 
+	  function showScoreButton() {
+		document.getElementById("scoreButton").style.display = "inline-block";
+	  }
+	</script>
   <script src="script.js"></script>
 </body>
 </html>
