--- a/index.html
+++ b/index.html
@@ -76,7 +76,18 @@
 		<!-- Buttons -->
 		<button id="scoreButton" onclick="hideScoreButton()">My Score</button>
 		<button id="clearButton" onclick="showScoreButton()">Clear</button>
-		<p id="scoreFeedback"></p> 
+		
+		<script>
+	  // Function to get the current date and time
+	  function getCurrentDateTime() {
+		const now = new Date();
+		return now.toLocaleString(); // Formats the date and time based on the user's locale
+	  }
+
+	  // Select the scoreFeedback element and update its content
+	  document.getElementById("scoreFeedback").innerHTML = "Date & Time: " + getCurrentDateTime();
+	</script>
+		
     </div>
   </div>
 		<!-- JavaScript -->
@@ -95,7 +106,10 @@
 			});
 		  });
 		</script>
+		
 	
   <script src="script.js"></script>
+  <p><span style="color: darkblue; font-size: 10px">Developer: Jony Rojas / Assistant: Felipe Molina</span></p>
+
 </body>
 </html>
