--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 		<button id="scoreButton" onclick="hideScoreButton()">My Score</button>
 		<button id="clearButton" onclick="showScoreButton()">Clear</button>
 		<p id="scoreFeedback"> </p>	
+		<div style="text-align: right; color: darkblue; font-size: 10px;"> Developer: Jony Rojas / Assistant: Felipe Molina
+</div>>
 		
     </div>
   </div>
@@ -99,7 +101,7 @@
 		
 	
   <script src="script.js"></script>
-  <p><span style="color: darkblue; font-size: 10px">Developer: Jony Rojas / Assistant: Felipe Molina</span></p>
+  
 
 </body>
 </html>
