--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<button id="clearButton" onclick="showScoreButton()">Clear</button>
 		<p id="scoreFeedback"> </p>	
 		<div style="text-align: right; color: darkblue; font-size: 10px;"> Developer: Jony Rojas / Assistant: Felipe Molina
-</div>>
+		</div>
 		
     </div>
   </div>
