--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 	  <pShow it or send it to your teacher (if requested)."</P><br>
       
 	  <!-- Data Entry Fields -->
-		<label for="school">* School:</label>
+		<<label for="school" style="color: darkblue; font-weight: bold;">* School:</label>
 		<input type="text" id="school" name="school" size="40"><br><br>
 
-		<label for="group">* Group:</label>
+		<label for="school" style="color: darkblue; font-weight: bold;">* Group:</label>
 		<input type="text" id="group" name="group" size="40"><br><br>
 
-		<label for="name">*Name + Last Name:</label>
+		<label for="school" style="color: darkblue; font-weight: bold;">* Full Name(s):</label>>
 		<input type="text" id="name" name="name" size="40"><br><br>
 		
 		<!-- Buttons -->
