Added time to it.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
       <button id="scoreButton">My Score</button>
       <button id="clearButton">Clear</button>
       <p id="scoreFeedback"></p>
-      <div style="text-align: right; color: darkblue; font-size: 10px;">
+	  <p id="timestamp"></p>
+      <div style="text-align: center; color: darkblue; font-size: 10px;">
         Developer: Jony Rojas / Assistant: Felipe Molina
       </div>
     </div>
