--- a/index.html
+++ b/index.html
@@ -57,26 +57,32 @@
   <div class="container">
     <div id="quizSection">
       <h3><span style="color: darkred;">TAKE A QUIZ</span></h3>
-      <p>Let's see how much you learned in this activity...</p>
+      <p><em>Let's see how much you learned in this activity...</em></p>
+	  
       <div id="quizContent"></div>
-      <p>Please, enter all the information in the boxes and take a screenshot.</p>
-      <p>Show it or send it to your teacher (if requested).</p><br>
+	  
+      <div class="info-box">
+		  <p>Please, enter all the information in the boxes and take a screenshot.</p>
+		  <p>Show it or send it to your teacher (if requested).</p><br>
 
-      <!-- Data Entry Fields -->
-      <label for="school" style="color: darkblue; font-weight: bold;">* School:</label>
-      <input type="text" id="school" name="school" size="40"><br><br>
+		  <!-- Data Entry Fields -->
+		  <label for="school" style="color: darkblue; font-weight: bold;">* School:</label>
+		  <input type="text" id="school" name="school" size="40"><br><br>
 
-      <label for="group" style="color: darkblue; font-weight: bold;">* Group:</label>
-      <input type="text" id="group" name="group" size="40"><br><br>
+		  <label for="group" style="color: darkblue; font-weight: bold;">* Group:</label>
+		  <input type="text" id="group" name="group" size="40"><br><br>
 
-      <label for="name" style="color: darkblue; font-weight: bold;">* Full Name(s):</label>
-      <input type="text" id="name" name="name" size="40"><br><br>
+		  <label for="name" style="color: darkblue; font-weight: bold;">* Full Name(s):</label>
+		  <input type="text" id="name" name="name" size="40"><br><br>
 
-      <!-- Buttons -->
-      <button id="scoreButton">My Score</button>
-      <button id="clearButton">Clear</button>
-      <p id="scoreFeedback"></p>
-	  <p id="timestamp"></p>
+		  <!-- Buttons -->
+		  <button id="scoreButton">My Score</button>
+		  <button id="clearButton">Clear</button>
+		  <p id="scoreFeedback"></p>
+		  <p id="timestamp"></p>
+		</div>
+	  
+	  
       <div style="text-align: center; color: darkblue; font-size: 10px;">
         Developer: Jony Rojas / Assistant: Felipe Molina
       </div>
