added colors to score details titles.

--- a/index.html
+++ b/index.html
@@ -78,8 +78,15 @@
 		  <!-- Buttons -->
 		  <button id="scoreButton">My Score</button>
 		  <button id="clearButton">Clear</button>
-		  <p id="scoreFeedback"></p>
-		  <p id="timestamp"></p>
+		  		    		  
+		  <p id="scoreFeedback">
+			  <span class="highlightFedbkTitles">Score:</span> <!-- Score will be dynamically inserted here -->
+			</p>
+			<p id="timestamp">
+			  <span class="highlightFedbkTitles">Date:</span> <!-- Date will be dynamically inserted here --> / 
+			  <span class="highlightFedbkTitles">Time:</span> <!-- Time will be dynamically inserted here -->
+			</p>
+		  
 		</div>
 	  
 	  
