--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
       <p><em>Let's see how much you learned in this activity...</em></p>
       <div id="quizContent"></div>
       <div class="info-box">
-        <p>Fill out all the information.</p>
-        <p>Take a screenshot (pantallazo).</p>
+        <p>Fill out all the information. Take a screenshot (pantallazo).</p>
         <p>Show it or send it to your teacher (if requested).</p><br>
         <!-- Data Entry Fields -->
         <label for="school" style="color: darkblue; font-weight: bold;">* Reading Title:</label>
@@ -70,7 +69,7 @@
         <input type="text" id="school" name="school" size="40"><br>
         <label for="group" style="color: darkblue; font-weight: bold;">* Group:</label>
         <input type="text" id="group" name="group" size="40"><br>
-        <label for="name" style="color: darkblue; font-weight: bold;">* Full Name(s):</label>
+        <label for="name" style="color: darkblue; font-weight: bold;">* Full Name:</label>
         <input type="text" id="name" name="name" size="40"><br><br>
         <!-- Buttons -->
         <button id="scoreButton">My Score</button>
