--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p id="timestamp"></p>
       </div>
       <div style="text-align: center; color: darkblue; font-size: 10px;">
-        Developer: Jony Rojas / Assistant: Felipe Molina
+        Developers: Jony Rojas & Felipe Molina /IT Support: Juan Pablo Gaviria
       </div>
     </div>
   </div>
