--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <hr>
     <!-- Image Section -->
     <div id="imageSection">
-      <!-- Camera feed will be inserted here -->
+      <!-- Image will be inserted here -->
     </div>
     <hr>
     <!-- Audio Player -->
@@ -55,15 +55,22 @@
   <!-- Quiz Section -->
   <div class="container">
     <div id="quizSection">
-      <h3><span style="color: darkred;">TAKE THE QUIZ NOW...</span></h3>
+      <h3><span style="color: darkred;">TAKE A QUIZ</span></h3>
       <p><em>Let's see how much you learned in this activity...</em></p>
       <div id="quizContent"></div>
       <div class="info-box">
         <p>Fill out all the information. Take a screenshot (pantallazo).</p>
         <p>Show it or send it to your teacher (if requested).</p><br>
         <!-- Data Entry Fields -->
-        <label for="school" style="color: darkblue; font-weight: bold;">* Reading Title:</label>
-        <input type="text" id="school" name="school" size="40"><br>
+        <div style="display: flex; align-items: center;">
+          <div style="flex: 1;">
+            <label for="readingTitle" style="color: darkblue; font-weight: bold;">* Reading Title:</label>
+            <input type="text" id="readingTitle" name="readingTitle" size="40">
+          </div>
+          <div id="cameraBox" style="width: 150px; height: 150px; border: 2px solid darkblue; margin-left: 20px; display: flex; justify-content: center; align-items: center; overflow: hidden;">
+            <!-- Camera feed will be inserted here -->
+          </div>
+        </div>
         <label for="school" style="color: darkblue; font-weight: bold;">* School:</label>
         <input type="text" id="school" name="school" size="40"><br>
         <label for="group" style="color: darkblue; font-weight: bold;">* Group:</label>
