--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,12 +27,12 @@
         <option value="11">11° Grade</option>
       </select>
     </div>
-    <hr>
-    <!-- Image Section -->
+	<hr>
+	    <!-- Image Section -->
     <div id="imageSection">
-      <!-- Image will be inserted here -->
+      <iframe id="imageFrame" src="" frameborder="0"></iframe>
     </div>
-    <hr>
+	<hr>
     <!-- Audio Player -->
     <audio id="audioPlayer" controls>
       <source id="audioSource" src="" type="audio/mpeg">
