fixed flex boxes in .css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weekly Readings by Teacher Jony Rojas</title>
+  <title>Weekly Readings by Teacher Jony Rojas IEGRM</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -62,7 +62,8 @@
       <div class="info-box">
         <p>Fill out all the information. Take a screenshot (pantallazo).</p>
         <p>Show it or send it to your teacher (if requested).</p><br>
-        <!-- Data Entry Fields -->
+        
+		<!-- Data Entry Student Fields -->
         <div style="display: flex; align-items: center;">
           <div style="flex: 1;">
             <label for="readingTitle" style="color: darkblue; font-weight: bold;">* Reading Title:</label>
