--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div id="quizContent"></div>
       <div class="info-box">
         <p>Fill out all the information. Take a screenshot (pantallazo).</p>
-        <p>Show it or send it to your teacher (if requested).</p><br>
+        <p>Show it or send it to your teacher (if requested).</p>
         
 		<!-- Data Entry Student Fields -->
         <div style="display: flex; align-items: center;">
@@ -69,7 +69,7 @@
             <label for="readingTitle" style="color: darkblue; font-weight: bold;">* Reading Title:</label>
             <input type="text" id="readingTitle" name="readingTitle" size="40">
           </div>
-          <div id="cameraBox" style="width: 150px; height: 150px; border: 2px solid darkblue; margin-left: 5px; display: flex; justify-content: center; align-items: center; overflow: hidden;">
+          <div id="cameraBox" style="width: 150px; height: 150px; border: 2px solid darkblue; margin-left: 20px; display: flex; justify-content: center; align-items: center; overflow: hidden;">
             <!-- Camera feed will be inserted here -->
           </div>
         </div>
