--- a/index.html
+++ b/index.html
@@ -60,12 +60,18 @@
       <p><em>Let's see how much you learned in this activity...</em></p>
       <div id="quizContent"></div>
       <div class="info-box">
-        <p>Fill out all the information. Take a screenshot (pantallazo).</p>
-        <p>Show it or send it to your teacher (if requested).</p>
+        <div style="flex: 1;">
+		<p>Fill out all the information. Take a screenshot (pantallazo).</p>
+        <p>Show it or send it to your teacher (if requested).</p>		
+		</div>		
+		
         
 		<!-- Data Entry Student Fields -->
         <div style="display: flex; align-items: center;">
-          <div style="flex: 1;">
+          <p>Fill out all the information. Take a screenshot (pantallazo).</p>
+		  <p>Show it or send it to your teacher (if requested).</p>
+		  
+		  <div style="flex: 1;">
             <label for="readingTitle" style="color: darkblue; font-weight: bold;">* Reading Title:</label>
             <input type="text" id="readingTitle" name="readingTitle" size="40">
           </div>
