--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weekly Readings by Teacher Jony Rojas IEGRM</title>
+  <title>Readings by Teacher Jony Rojas et al.</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
