--- a/index - bk Original.html
+++ b/index - bk Original.html
@@ -33,13 +33,7 @@
       <iframe id="imageFrame" src="" frameborder="0"></iframe>
     </div>
 	<hr>
-    
-	<!-- My new talking character -->
-		<div id="character-container">
-		  <img id="talking-character" src="assets/characters/default.png" alt="Talking character">
-		</div>
-
-	<!-- Audio Player -->
+    <!-- Audio Player -->
     <audio id="audioPlayer" controls>
       <source id="audioSource" src="" type="audio/mpeg">
       Your browser does not support the audio element.
@@ -98,11 +92,9 @@
     </div>
   </div>
 
-  <!-- JavaScripts -->
+  <!-- JavaScript -->
   <script src="audio.js"></script>
   <script src="script.js"></script>
-  <script src="camera.js"></script>  
-  <script src="characters.js"></script>
-
+  <script src="camera.js"></script>
 </body>
 </html>
