--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
     </div>
 	<hr>
     
-	<!-- My new talking character -->
-		<div id="character-container">
-		  <img id="talking-character" src="assets/characters/default.png" alt="Talking character">
-		</div>
+
 
 	<!-- Audio Player -->
     <audio id="audioPlayer" controls>
@@ -58,6 +55,11 @@
       <div id="vocabularyContent"></div>
     </div>
   </div>
+  
+  	<!-- My new talking character -->
+    <img id="talking-character" 
+       style="position:absolute; right:0; bottom:0; width:150px; display:none;">
+    </div>
 
     <!-- Quiz Section -->
   <div class="container">
