--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
       <iframe id="imageFrame" src="" frameborder="0"></iframe>
     </div>
 	<hr>
-    
-
-
-	<!-- Audio Player -->
+    <!-- Audio Player -->
     <audio id="audioPlayer" controls>
       <source id="audioSource" src="" type="audio/mpeg">
       Your browser does not support the audio element.
@@ -55,11 +52,6 @@
       <div id="vocabularyContent"></div>
     </div>
   </div>
-  
-  	<!-- My new talking character -->
-    <img id="talking-character" 
-       style="position:absolute; right:0; bottom:0; width:150px; display:none;">
-    </div>
 
     <!-- Quiz Section -->
   <div class="container">
@@ -100,11 +92,9 @@
     </div>
   </div>
 
-  <!-- JavaScripts -->
+  <!-- JavaScript -->
   <script src="audio.js"></script>
   <script src="script.js"></script>
-  <script src="camera.js"></script>  
-  <script src="characters.js"></script>
-
+  <script src="camera.js"></script>
 </body>
 </html>
