--- a/index.html
+++ b/index.html
@@ -91,8 +91,12 @@
       </div>
     </div>
   </div>
+  
+<!-- Adding character elements to this shit -->
+  <img id="talking-character" style="display:none;">
 
   <!-- JavaScript -->
+  <script src="character.js"></script> <!-- Add this line -->
   <script src="audio.js"></script>
   <script src="script.js"></script>
   <script src="camera.js"></script>
