--- a/index.html
+++ b/index.html
@@ -91,14 +91,10 @@
       </div>
     </div>
   </div>
-  
-<!-- Add this right before the closing </body> tag -->
-<img id="talking-character" style="display:none;">
 
-<!-- JavaScript - IMPORTANT: Load character.js AFTER audio.js -->
-<script src="audio.js"></script>
-<script src="character.js"></script>
-<script src="script.js"></script>
-<script src="camera.js"></script>
+  <!-- JavaScript -->
+  <script src="audio.js"></script>
+  <script src="script.js"></script>
+  <script src="camera.js"></script>
 </body>
 </html>
