--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
       <source id="audioSource" src="" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
+	
+	<!-- Added thid for the AI character -->
+		<div id="character-container">
+		<canvas id="talking-character" width="200" height="200"></canvas>
+		</div>
+	
+	
     <!-- Reading Text -->
     <div id="readingText">
       <p id="textContent">Select a week and grade to load the reading.</p>
