--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
   <!-- JavaScript -->
   <script src="audio.js"></script>
+  <script src="character.js"></script>
   <script src="script.js"></script>
   <script src="camera.js"></script>
 </body>
