--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <iframe id="imageFrame" src="" frameborder="0"></iframe>
     </div>
 	<hr>
+	<h3><span style="color: darkred;">updated 1.22 am</span></h3>
 		<!-- Added thid for the AI character -->
 		<div id="character-container">
 		<canvas id="talking-character" width="200" height="200"></canvas>
