--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </select>
     </div>
     <hr>
+	<p>hour of update: 5.59</p>
     
     <!-- Image Section -->
     <div id="imageSection">
