--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<p>Updated time: 10.28</p>
   <div class="container">
     <!-- Week Selection -->
     <div class="selector">
