--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <!-- Week Selection -->
     <div class="selector">
-      <label for="weekSelect">Select Week (11.30):</label>
+      <label for="weekSelect">Select Week (12.43 am):</label>
       <select id="weekSelect"></select>
 
     <!-- Grade Selection -->
