--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <!-- Week and Grade Selectors - Minimal spacing -->
   <div style="display: flex; gap: 2px; margin-bottom: 20px; align-items: flex-end;">
     <!-- Week Selection -->
-    <div class="selector" style="flex: 1; margin-left: +50px;">
+    <div class="selector" style="flex: 1; margin-left: +25px;">
       <label for="weekSelect">Select Week:</label>
       <select id="weekSelect"></select>
     </div>
 
     <!-- Grade Selection -->
-    <div class="selector" style="flex: 1; margin-left: -150px;">
+    <div class="selector" style="flex: 1; margin-right: 25px;">
       <label for="gradeSelect">Select Grade:</label>
       <select id="gradeSelect">
         <option value="6">6° Grade</option>
