--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div class="container">
   <!-- Week and Grade Selectors - Minimal spacing -->
-  <div style="display: flex; gap: 2px; margin-bottom: 20px; align-items: flex-end;">
+  <div>
     <!-- Week Selection -->
     <div class="selector" style="flex: 1; margin-left: +75px;">
       <label for="weekSelect">Select Week:</label>
@@ -20,7 +20,7 @@
     </div>
 
     <!-- Grade Selection -->
-    <div class="selector" style="flex: 1; margin-right: 25px;">
+    <div>
       <label for="gradeSelect">Select Grade:</label>
       <select id="gradeSelect">
         <option value="6">6° Grade</option>
