--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Week and Grade Selectors - Minimal spacing -->
   <div>
     <!-- Week Selection -->
-    <div class="selector" style="flex: 1; margin-left: +75px;">
+    <div>
       <label for="weekSelect">Select Week:</label>
       <select id="weekSelect"></select>
     </div>
