--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 
 </head>
 <body>
-
 <div class="container">
-  <!-- Week and Grade Selectors - Minimal spacing -->
-  <div>
+  <!-- Week and Grade Selectors - With increased spacing -->
+  <div style="display: flex; flex-direction: column; gap: 20px;">
     <!-- Week Selection -->
     <div>
-      <label for="weekSelect"> Select Week:</label>
+      <label for="weekSelect">Select Week:</label>
       <select id="weekSelect"></select>
     </div>
 
@@ -32,6 +31,7 @@
       </select>
     </div>
   </div>
+</div>
 
   <!-- Rest of your content remains exactly the same -->
   <div id="imageSection">
