--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<!-- Buttons -->
         <button id="scoreButton">My Score</button>
         <button id="clearButton">Clear</button>
-		<button id="screenshotButton">Take Screenshot</button>
+		<button id="screenshotButton">Screenshot</button>
 		
 		
 		
